# esp32-taxisim

./: .gitignore  CMakeLists.txt  CMakeLists.txt.orig  Makefile  README.md  sdkconfig  sdkconfig.old
board_design/level_shifter/: level_shifter-cache.lib  level_shifter.pro  level_shifter.sch  sym-lib-table
board_design/level_shifter/libs/: CD40109BE.lib
components/cardsim/: CMakeLists.txt  cardsim.c  component.mk
components/cardsim/include/: cardsim.h
components/gwp5043/: CMakeLists.txt  component.mk  gwp5043.c
components/gwp5043/include/: gwp5043.h
components/simple_wifi/: CMakeLists.txt  Kconfig.projbuild  component.mk  simple_wifi.c
components/simple_wifi/include/: simple_wifi.h
components/touchpad_api/: CMakeLists.txt  component.mk  touchpad_api.c
components/touchpad_api/include/: touchpad_api.h
components/wifi_smartconfig/: component.mk  wifi_smartconfig.c
components/wifi_smartconfig/include/: wifi_smartconfig.h
main/: CMakeLists.txt  Kconfig.projbuild  app_main.c  app_main.c.old  component.mk  taxisim.c  tempmon.c
misc/: mqttlib-setup.txt  working commands.txt
